naming conventions + comments + marking criteria

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -1,7 +1,7 @@
 all: catpng findpng
 
 catpng: catpng.c
-	gcc catpng.c ./starter/png_util/zutil.c ./starter/png_util/crc.c -o catpng -lz 
+	gcc catpng.h catpng.c ./starter/png_util/zutil.c ./starter/png_util/crc.c -o catpng -lz 
 
 findpng: findpng.c
 	gcc findpng.c pnginfo.c -o findpng
