Removed useless copy folder, fixed makefile clean, now fetching from more than 1 server.

--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -4,4 +4,4 @@ paster: paster2.c
 	gcc paster2.c shm_stack.c ../lab1/starter/png_util/zutil.c ../lab1/starter/png_util/crc.c -o paster2 -lcurl -pthread -lz
 	
 clean:
-	rm paster
+	rm paster2
