--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -19,8 +19,8 @@ LDLIBS_XML2 = $(shell xml2-config --libs)
 LDLIBS_CURL = $(shell curl-config --libs)
 LDLIBS = -pthread $(LDLIBS_XML2) $(LDLIBS_CURL) 
 
-SRCS   = findpng2.c
-OBJS3  = findpng2.o
+SRCS   = findpng2.c queue.c
+OBJS3  = findpng2.o queue.o
 TARGETS= findpng2.out
 
 all: ${TARGETS}
